<resources>
    <string name="app_name">Exp Admin Panel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- navigation drawer item name -->
    <string name="menu_timeline">News Feed</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_clientlist">Client List</string>
    <string name="menu_search">Search</string>
    <string name="menu_notice">Notice</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_txnlist">Transaction List</string>
    <string name="menu_smsHistory">SMS History</string>

    <!-- activity title -->
    <string name="title_main_activity">Admin Panel</string>
    <string name="title_news_create">News Create</string>
    <string name="title_news_edit">News Edit</string>
    <string name="title_news_details">News Details</string>

    <string name="title_dashboard">Dashboard</string>

    <string name="title_client_list">Client List</string>
    <string name="title_client_details">Client Details</string>
    <string name="title_client_detaisl_edit">Client Details Edit</string>

    <string name="title_notice">All Notice</string>
    <string name="title_notice_create">Notice Create</string>
    <string name="title_notice_edit_delete">Notice Edit/Delete</string>

    <string name="title_feedback">All Feedback</string>

    <string name="title_txn_list">Transaction List</string>
    <string name="title_txn_create">Transaction Create</string>
    <string name="title_sms_history">SMS History</string>

    <!--                server URL              -->

    <!-- base url -->
    <!-- <string name="base_url">http://192.168.1.13:8080/API/expert_internet_api/exp-v4.0/</string> -->
    <string name="base_url">https://creativesaif.com/api/exp-v3.3/</string>

    <!-- news script directory -->
    <!-- News CRUD -->
    <string name="news_create">news/create.php</string>
    <string name="news_read">news/read.php</string>
    <string name="news_update">news/update.php</string>
    <string name="news_delete">news/delete.php</string>
    <string name="news_image_path">news/images/</string>
    <string name="ads_details">Post Details</string>

    <!-- Client script directory -->
    <!-- Client CRUD -->
    <string name="check_alert_client">client/check_alert_client.php</string>
    <string name="active_client_read">client/active_client.php</string>
    <string name="inactive_client_read">client/inactive_client.php</string>
    <string name="alert_client_read">client/alert_client.php</string>
    <string name="over3day_client_read">client/over3DayClient.php</string>
    <string name="client_details">client/client_details.php</string>
    <string name="update_details">client/update.php</string>
    <string name="usernamelist">client/getting_all_username.php</string>


    <!-- Search -->
    <string name="search">search/search.php?q=</string>

    <!-- Client txn -->
    <string name="payment_details">txn/payment_details.php</string>
    <string name="client_txn">txn/make_txn.php</string>
    <string name="all_txn">txn/all_txn.php</string>
    <string name="total_credit_debit">txn/total_credit_debit.php</string>
    <string name="admin_txn">txn/admin_make_txn.php</string>
    <string name="txn_details">txn/txn_details.php</string>
    <string name="txn_delete">txn/txn_delete.php</string>
    <string name="txn_update">txn/txn_update.php</string>


    <!-- laravel txn -->
    <string name="admin_txn_laravel">https://creativesaif.com/api/exp-api/api/transation_owner</string>
    <string name="client_txn_laravel">https://creativesaif.com/api/exp-api/api/transation_client</string>

    <!-- Dashboard -->
    <string name="dashboard_data">dashboard/read.php</string>

    <!-- Notice -->
    <string name="notice_create">notice/create.php</string>
    <string name="all_notice_read">notice/read.php</string>
    <string name="notice_delete">notice/delete.php</string>
    <string name="notice_update">notice/update.php</string>

    <!-- Feedback -->
    <string name="feedback_read">feedback/read.php</string>

    <!-- Sms service -->
    <string name="get_sms_status">sms/get_sms_status.php</string>
    <string name="alert_client_sms_service">sms/alert_client_sms_service.php</string>
    <string name="active_client_sms_service">sms/active_client_sms_service.php</string>
    <string name="idwise_sms_service">sms/idwise_sms_service.php</string>
    <string name="sms_history">sms/sms_history.php</string>


    <!-- Area -->
    <string name="area_load">area/area.php</string>
    <string name="title_activity_login">LoginActivity</string>


    <!-- Login -->
    <string name="login">user/login.php</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>
