<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/menu_timeline"/>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_dashboard"/>
        <item
            android:id="@+id/nav_clientlist"
            android:icon="@drawable/ic_client_list_black_24dp"
            android:title="@string/menu_clientlist"/>

        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_notice_black_24dp"
            android:title="@string/menu_notice"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/menu_feedback"/>

        <item
            android:id="@+id/nav_txnlist"
            android:icon="@drawable/ic_txn_list_black_24dp"
            android:title="@string/menu_txnlist"/>

        <item
            android:id="@+id/nav_smsHistory"
            android:icon="@drawable/ic_baseline_sms_24"
            android:title="@string/menu_smsHistory"/>
    </group>

</menu>
